2013-04-07  Carl Hetherington  <cth@carlh.net>

	* Make the audio plot expand in height when its
	window is enlarged.

	* Label subtitle offset with "pixels" (#101).

	* Speculative fix for error on forcing language
	to English (#103).

2013-04-01  Carl Hetherington  <cth@carlh.net>

	* Version 0.79 released.

2013-04-01  Carl Hetherington  <cth@carlh.net>

	* Fix some missing translated strings
	on Windows.

2013-03-31  Carl Hetherington  <cth@carlh.net>

	* Version 0.78 released.

2013-03-28  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta16 released.

2013-03-28  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta15 released.

2013-03-28  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta14 released.

2013-03-27  Carl Hetherington  <cth@carlh.net>

	* Fix erroneous disk space reporting (#85).

	* Version 0.78beta13 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta12 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta11 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta10 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta9 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta8 released.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Add button to cancel jobs.

2013-03-26  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta7 released.

2013-03-25  Carl Hetherington  <cth@carlh.net>

	* Add option to set user interface language.

2013-03-25  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta6 released.

2013-03-24  Carl Hetherington  <cth@carlh.net>

	* Add UI option to select interface language.

2013-03-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta5 released.

2013-03-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta4 released.

2013-03-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.78beta3 released.

2013-03-20  Carl Hetherington  <cth@carlh.net>
